Grunt front side automation wired

--- a/client/index.html
+++ b/client/index.html
@@ -7,13 +7,26 @@
         <meta name="description" content="954live Backend"/>
         <meta name="viewport" content="width=device-width"/>
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory-->
+
+        <!-- build:css css/app.css-->
         <!-- bower:css -->
         <!-- endbower -->
+        <!-- injector:css -->
+        <link rel="stylesheet" href="css/sass/app.css">
+        <link rel="stylesheet" href="css/scripts/components/calculator/calculator.css">
+        <!-- endinjector -->
+        <!-- endbuild -->
     </head>
     <body>
 
+    <!-- build:js js/app.js-->
     <!-- bower:js -->
     <script src="bower_components/angular/angular.js"></script>
     <!-- endbower -->
+    <!-- injector:js -->
+    <script src="scripts/components/calculator/calculator.js"></script>
+    <!-- endinjector -->
+    <!-- endbuild -->
+
     </body>
 </html>
