--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,8 @@
     <head>
         <base href="/" />
         <meta charset="utf-8"/>
-        <title>Trolly Tracker</title>
-        <meta name="description" content="Trolly Tracker"/>
+        <title>trolley Tracker</title>
+        <meta name="description" content="trolley Tracker"/>
         <meta name="viewport" content="width=device-width"/>
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory-->
 
